--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,6 +2,7 @@
 <hr>
 <div class="row">
     <div class="col text-right">
+        <!-- solo ruta estatica -->
         <button routerLink="/heroe/nuevo" class="btn btn-primary"><i class="fa fa-plus"></i> Agregar</button>
     </div>
 </div>
@@ -16,12 +17,23 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>@mdo</td>
+        <tr *ngFor="let item of heroes; let i = index">
+            <th scope="row">{{ i + 1}}</th>
+            <td>{{item.nombre}}</td>
+            <td>{{item.poder}}</td>
+            <td>
+                <label class="badge badge-success" *ngIf="item.vivo">Vivo</label>
+                <label class="badge badge-danger" *ngIf="!item.vivo">Muerto</label>
+            </td>
+            <td>
+                <!-- cuando se le pasa parametros y se debe procesar la ruta -->
+                <button class="btn btn-info mr-1" [routerLink]="['/heroe', item.id]">
+                    <i class="fa fa-pen"></i>
+                </button>
+                <button class="btn btn-danger" [routerLink]="['/heroe', item.id]">
+                        <i class="fa fa-trash"></i>
+                </button>
+            </td>
         </tr>
     </tbody>
 </table>
