--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -6,7 +6,7 @@
         <button routerLink="/heroe/nuevo" class="btn btn-primary"><i class="fa fa-plus"></i> Agregar</button>
     </div>
 </div>
-<table class="table mt-3 animated fadeIn faster table-hover table-bordered">
+<table class="table mt-3 animated fadeIn faster table-hover table-bordered" *ngIf="!cargando && heroes.length > 0">
     <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
@@ -30,7 +30,7 @@
                 <button class="btn btn-info mr-1" [routerLink]="['/heroe', item.id]">
                     <i class="fa fa-pen"></i>
                 </button>
-                <button class="btn btn-danger" [routerLink]="['/heroe', item.id]">
+                <button class="btn btn-danger" (click)="borrarHeroe(item, i)">
                         <i class="fa fa-trash"></i>
                 </button>
             </td>
@@ -38,7 +38,7 @@
     </tbody>
 </table>
 
-<div class="alert alert-info text-center mt-3">
+<div class="alert alert-info text-center mt-3 animated fadeIn faster" *ngIf="cargando">
     <h4 class="alert-heading">Cargando</h4>
     <p>
         <i class="fa fa-sync-alt fa-spin fa-2x"></i>
@@ -48,7 +48,7 @@
     </p>
 </div>
 
-<div class="alert alert-warning text-center mt-3">
+<div class="alert alert-warning text-center mt-3 animated fadeIn faster" *ngIf="!cargando && heroes.length === 0">
     <h4 class="alert-heading">No hay registros</h4>
     <p>
         <i class="fa fa-exclamation fa-2x"></i>
